--- a/CHANGELOG/1.4.0.md
+++ b/CHANGELOG/1.4.0.md
@@ -5,3 +5,22 @@
 ### Classes
 
  * DateUtil
+
+### Functions
+
+ * Collection#toArray
+ * ImprovedArray#removeDuplicates
+ * ImprovedArray#scramble
+ * ImprovedArray#countOccurrences
+ * getTypeString
+ * isClass
+ * isDate
+ * isError
+ * StringUtil.isHTTPUrl
+ * StringUtil.isUrlWithoutHTTP
+ * StringUtil.collaps
+ * StringUtil.noSpaces
+ * StringUtil.toCharCode
+ * StringUtil.protectEmail
+ * StringUtil.swapCase
+ * StringUtil.randomColorCode
