--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,57 @@
+<div align="center">
+  <img src="./logo.png" />
+  <h3>Sussy-Util</h3>
+  <strong>Version 10</strong>
+</div>
+
+## About
+
 Sussy Util is a TypeScript utility package that provides a set of helpful functions for performing common tasks in nodejs and web applications.
 
-<Accordion title="Why?">
-  You can put any content in here.
-</Accordion>
+### Example usage
+
+<CodeGroup>
+```bash npm
+npm i sussy-util
+```
+
+```bash yarn
+yarn add sussy-util
+```
+</CodeGroup>
+
+<CodeGroup>
+```js JavaScript (CommonJS)
+// importing everything
+const sussyutil = require("sussy-util");
+
+//importing classes/functions
+const { classes } = require("sussy-util");
+
+// importing one function/class
+const { UrlUtil } = require("sussy-util");
+```
+
+
+
+```ts TypeScript / JavaScript (ES2020+)
+// importing everything
+import sussyutil from "sussy-util";
+
+//importing classes/functions
+import { classes } from "sussy-util";
+
+// importing one function/class
+import { UrlUtil } from "sussy-util";
+```
+</CodeGroup>
+
+## Documentation: [classes](https://github.com/roteklaue/sussy-util/tree/master/docs/classes/README.md) [functions](https://github.com/roteklaue/sussy-util/tree/master/docs/functions/README.md)
+
+## Changelog: [here](https://github.com/roteklaue/sussy-util/tree/master/CHANGELOG/README.md)
+
+### Links
+
+- [`npm`](https://npmjs.com/package/sussy-util)
+- [`yarn`](https://yarnpkg.com/package/sussy-util)
+- [`github`](https://github.com/roteklaue/sussy-util)
